--- a/index.html
+++ b/index.html
@@ -26,15 +26,77 @@
         <div class="speak-up-logo-container">
             <img src="./SpeakUpLogo.png" alt="Speak Up Logo" class="speak-up-logo">
         </div>
-        <h1 class="heading" id="heading">Дізнайся більше про Speak Up Metaverse, замов безкоштовний пробний урок!</h1>
-        <div class="form">
-            <input class="input" type="text" id="input1" placeholder="Ваше ім'я та прізвище (Обов'язково)">
-            <input class="input" type="text" id="input2" placeholder="Ваш номер телефону (Обов'язково)">
-            <input class="input" type="text" id="input3" placeholder="Ваша електронна пошта (За бажанням)">
-            <button class="btn submit-btn" id="submit-btn">Замовити</button>
+        <h1 class="heading" id="heading">Дізнайся більше про Speak Up Metaverse, зареєструйся на безкоштовний пробний
+            урок!</h1>
+        <form class="form" action="https://getform.io/f/af844574-d827-4a0d-adb6-8540141cbb57" method="POST" id="form">
+            <input class="input" type="text" id="input1" name="name" placeholder="Ваше ім'я та прізвище (Обов'язково)">
+            <input class="input" type="text" id="input2" name="phone" placeholder="Ваш номер телефону (Обов'язково)">
+            <input class="input" type="text" id="input3" name="email" placeholder="Ваша електронна пошта (За бажанням)">
+            <button type="button" class="btn submit-btn" id="submit-btn">Зареєструватися</button>
+        </form>
+        <div class="dialogue" id="dialogue-success">
+            <p class="dialogue-text" id="dialogue-success-text">Дякуємо за реестрацію на пробний урок, з вами скоро
+                зв'яжеться
+                консультант</p>
+        </div>
+        <div class="dialogue" id="dialogue-fail">
+            <p class="dialogue-text" id="dialogue-fail-text">Будь ласка, заповніть всі поля, необхідні для реєстрації
+                (Ім'я та номер телефону)
+            </p>
         </div>
     </div>
     <script src="./index.js"></script>
+    <script>
+        submitBtn.addEventListener( 'click', () =>
+        {
+            event.preventDefault();
+            if ( input1.value && input2.value )
+            {
+                form = document.getElementById( 'form' );
+                const data = new URLSearchParams();
+                for ( const pair of new FormData( form ) )
+                {
+                    data.append( pair[ 0 ], pair[ 1 ] );
+                }
+
+                fetch( 'https://getform.io/f/af844574-d827-4a0d-adb6-8540141cbb57', {
+                    method: 'post',
+                    body: data,
+                } )
+                input1.value = '';
+                input2.value = '';
+                input3.value = '';
+                dialogueSuccess.style.display = 'block';
+                setTimeout( () =>
+                {
+                    dialogueSuccess.classList.add( 'dialogue-active' );
+                }, 1 );
+                setTimeout( () =>
+                {
+                    dialogueSuccess.classList.remove( 'dialogue-active' );
+                    setTimeout( () =>
+                    {
+                        dialogueSuccess.style.display = 'none';
+                    }, 1000 );
+                }, 5000 );
+            } else
+            {
+                dialogueFail.style.display = 'block';
+                setTimeout( () =>
+                {
+                    dialogueFail.classList.add( 'dialogue-active' );
+                }, 1 );
+                setTimeout( () =>
+                {
+                    dialogueFail.classList.remove( 'dialogue-active' );
+                    setTimeout( () =>
+                    {
+                        dialogueFail.style.display = 'none';
+                    }, 1000 );
+                }, 5000 );
+            }
+        } );
+    </script>
 </body>
 
 </html>
