--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <h1 class="heading" id="heading">Дізнайся більше про Speak Up Metaverse, зареєструйся на безкоштовний пробний
             урок!</h1>
-        <form class="form" action="https://getform.io/f/af844574-d827-4a0d-adb6-8540141cbb57" method="POST" id="form">
+        <form class="form" id="form">
             <input class="input" type="text" id="input1" name="name" placeholder="Ваше ім'я та прізвище (Обов'язково)">
             <input class="input" type="text" id="input2" name="phone" placeholder="Ваш номер телефону (Обов'язково)">
             <input class="input" type="text" id="input3" name="email" placeholder="Ваша електронна пошта (За бажанням)">
